--- a/style.css
+++ b/style.css
@@ -1,21 +1,40 @@
 html, body, h1, div { margin:0; }
 ul, li {list-style: none; margin:0; padding:0;}
-button {border:0; background:none; cursor: pointer;}
+button {border:0; background:none; cursor: pointer; word-break: keep-all;}
 input {outline: none;}
 body { background:#f0f0f0; }
-.container { width:1000px; margin:0 auto; min-height: 100vh; padding:50px 0; font-size:20px;}
+.container { max-width:1000px; width:90%; margin:0 auto; min-height: 100vh; padding:50px 0; font-size:20px;}
 h1 {text-align: center;}
-.input-area { background:#fff; padding:50px 100px; margin: 30px auto; display: flex; justify-content: space-between; border-radius: 20px; box-shadow: 3px 3px 6px rgba(0,0,0,0.05);}
+.input-area { background:#fff; padding:50px 100px; margin: 50px auto 20px; display: flex; justify-content: space-between; border-radius: 20px; box-shadow: 3px 3px 6px rgba(0,0,0,0.05);}
 .input-area input {width:calc(75% - 60px); background:#ebf1f5; border-radius: 50px; padding:0 30px;}
+.input-area input::placeholder {color:#b7c3ca;}
+.input-area input:focus::placeholder {color:#ebf1f5;}
 .input-area button {width: 22%; background:#3d79b1; border-radius: 50px; color:#fff;}
 .input-area > * {line-height: 50px; border:0; font-size:20px;}
-.task-tabs {width:fit-content; margin:0 auto 30px; position:relative;}
-.task-tabs ul {display: flex; border-bottom:1px solid #c9c9c9; width: fit-content; margin:0 auto;}
-.task-tabs li { padding:15px 40px; cursor: pointer;}
-
-#underline { background: #3d79b1; height: 3px; position: absolute; bottom: 0; left: 0px; width: 115px; transition: 0.5s; z-index: 2;}
-
+.task-tabs {margin:0 auto 30px; position:relative; max-width: 600px;}
+.task-tabs ul {display: flex; border-bottom:1px solid #c9c9c9; margin:0 auto;}
+.task-tabs li { width:33.33%; cursor: pointer; padding:30px 0 20px; text-align: center;}
+#underline { background: #3d79b1; height: 3px; position: absolute; bottom: 0; left: 0px; width: 33.33%; transition: 0.5s; z-index: 2;}
+.button-area {display: flex; width:80%;}
 .task { padding: 10px 100px; background: #fff; display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px; border-radius: 20px; box-shadow: 3px 3px 6px rgba(0,0,0,0.05);}
-.task.done {background:#e4e4e4; box-shadow: none;}
-.task.done p {text-decoration: line-through; color:#a2a2a2;}
-.task button i {font-size:19px;}
+.task p { cursor: pointer; ext-wrap: wrap; word-break: break-all;}
+.task.done { background:#e4e4e4; box-shadow: none;}
+.task.done p { text-decoration: line-through; color:#a2a2a2;}
+.task.done i { color:#a2a2a2; }
+.task button i { font-size:19px; margin-right:10px;}
+
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+    .container { font-size:18px;}
+    .input-area > * { font-size:18px;}
+    .input-area { padding:40px 60px; margin: 30px auto 10px; }
+    .task-tabs li {padding:20px 0 10px;}
+    .task {padding: 10px 60px;}
+}
+
+@media all and (max-width: 767px) {
+    .container { font-size:16px;}
+    .input-area > * { font-size:16px;}
+    .input-area { padding:40px 30px; margin: 20px auto 10px; }
+    .task {padding: 10px 30px;}
+}
